# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page-analyzer.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: index.html  sample.html  show_url.html  url_detail.html  urls.html
